fixed overlapping issue with profile icon

--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -31,3 +31,10 @@
 .nav-el:click {
     background-color: gold;
 } */
+
+.z-1 {
+    z-index: -1;
+}
+.z1 {
+    z-index: 1;
+}
